# esp32-project

./: .gitignore  Cargo.toml  Readme.md  build.rs
.cargo/: config.toml
images/: Honey.qoi  Qube4-esp32.qoi  qoi_logo-135x240.qoi
src/: main.rs
