[package]
name = "esp32-project"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
arqoii = "*"
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-hal = "0.39.4"
mipidsi = "0.7.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
embedded-graphics-core = "0.4.0"
tinybmp = "*"


[build-dependencies]
embuild = "0.30.4"
