[package]
name = "esp32-project"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
arqoii = "0.3.0"
esp-idf-sys = { version = "0.34.1", features = ["binstart"] }
esp-idf-hal = "0.43.1"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"


[build-dependencies]
embuild = "0.31.4"
