[package]
name = "esp32-project"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

[[bin]]
name = "esp32-project"
harness = false        # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
pio = ["esp-idf-svc/pio"]
experimental = ["esp-idf-svc/experimental"]

[dependencies]
arqoii = "0.3.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
esp-idf-svc = { version = "0.49", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
log = "0.4"
mipidsi = "0.8.0"
thiserror = "2.0.7"
toml-cfg = "0.2.0"


[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"     # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
toml-cfg = "0.2.0"
